--- a/src/App.css
+++ b/src/App.css
@@ -6,24 +6,28 @@ div.stack > * {
     position: absolute;
 }
 
-body {
-    background-color: black;
-    font-family: cursive;
-}
+/*body {*/
+/*    background-color: black;*/
+/*    font-family: cursive;*/
+/*}*/
 
-.glow {
-    font-size: 80px;
-    color: #fff;
-    text-align: center;
-    animation: glow 1s ease-in-out infinite alternate;
-}
+/*.glow {*/
+/*    font-size: 80px;*/
+/*    color: #fff;*/
+/*    text-align: center;*/
+/*    animation: glow 1s ease-in-out infinite alternate;*/
+/*}*/
 
-@keyframes glow {
-    from {
-        text-shadow: 0 0px 0px #090973;
-    }
+/*@keyframes glow {*/
+/*    from {*/
+/*        text-shadow: 0 0px 0px #090973;*/
+/*    }*/
 
-    to {
-        text-shadow: 0px -0px 20px #090973;
-    }
+/*    to {*/
+/*        text-shadow: 0px -0px 20px #090973;*/
+/*    }*/
+/*}*/
+
+.hoverable:hover {
+    background-color: rgb(70 70 70) !important;
 }
