--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,25 @@ div.stack > * {
     position: absolute;
 }
 
+.MuiButton-root {
+    text-transform: none !important;
+}
+/*.MuiFormControl-root {*/
+/*    height: 100%;*/
+/*}*/
+.MuiInputBase-input {
+    height: 100% !important;
+    overflow: auto !important;
+}
+.MuiFilledInput-multiline {
+    height: 100%;
+}
+
+
+html,body, #root {
+    height:100%;
+}
+
 /*body {*/
 /*    background-color: black;*/
 /*    font-family: cursive;*/
