idk what i'm doing

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@ div.stack > * {
 .MuiFilledInput-multiline {
     height: 100%;
 }
+.MuiFilledInput-root {
+    height: 100% !important;
+}
 
 
 html,body, #root {
