--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ html,body, #root {
 }
 div[role=tooltip]{
    max-height: 100px;
+    z-index: 2000;
 }
 /*body {*/
 /*    background-color: black;*/
