--- a/src/App.css
+++ b/src/App.css
@@ -31,27 +31,6 @@ div[role=tooltip]{
    max-height: 100px;
     z-index: 2000;
 }
-/*body {*/
-/*    background-color: black;*/
-/*    font-family: cursive;*/
-/*}*/
-
-/*.glow {*/
-/*    font-size: 80px;*/
-/*    color: #fff;*/
-/*    text-align: center;*/
-/*    animation: glow 1s ease-in-out infinite alternate;*/
-/*}*/
-
-/*@keyframes glow {*/
-/*    from {*/
-/*        text-shadow: 0 0px 0px #090973;*/
-/*    }*/
-
-/*    to {*/
-/*        text-shadow: 0px -0px 20px #090973;*/
-/*    }*/
-/*}*/
 
 .hoverable:hover {
     background-color: rgb(70 70 70) !important;
@@ -72,4 +51,18 @@ div[role=tooltip]{
 
 .wrapper {
     display: inline-block;
+}
+
+/*Fixes dialogs not being centered*/
+div[role=dialog]{
+    margin-bottom: 150px;
+}
+
+.link-spanner {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+    z-index: 1;
 }
