--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,25 @@ div[role=presentation]{
 /*    -moz-text-size-adjust: 100%;*/
 /*    -ms-text-size-adjust: 100%;*/
 /*}*/
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-color: black;
+}
+
+.container {
+    overflow: hidden;
+}
+
+.text {
+    color: white;
+    font-family: sans-serif;
+    border-style: none none solid none;
+    display: inline-block;
+    padding: 20px 300px;
+    transform: translateX(min(0vw, calc(50vw - 50%)));
+}
