--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,13 @@ body {
     padding: 20px 300px;
     transform: translateX(min(0vw, calc(50vw - 50%)));
 }
+
+.blinking_text {
+    animation: blinker 3s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0.3;
+    }
+}
