--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,3 +112,12 @@ body {
         opacity: 0.3;
     }
 }
+
+/*Show transparent circle on hover*/
+.link:hover{
+    background-color: rgba(255,255,255,0.1) ;
+}
+.link {
+    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 50%;
+}
